
                CHANGES IN party VERSION 0.8-8 (2006-08-23)

    o    export `varimp' (variable importance measures for cforest())

    o    documentation updates

    o    add codetools checks


                CHANGES IN party VERSION 0.8-7 (2006-07-17)

    o    REAL(NULL) now gives an error in C code and scores could be 
         potentially NULL: fixed for the time being.

    o    add `show' method for BinaryTree and RandomForest objects


                CHANGES IN party VERSION 0.8-6 (2006-05-22)

    o    add some validity checks for hyper parameters

    o    add function `varimp' for computing variable importance
         measures for some random forests (this is still experimental and
         thus not exported yet, so use `party:::varimp')


                CHANGES IN party VERSION 0.8-5 (2006-04-25)

    o    all hyper parameters to `cforest' are now controlled using
         objects of a new class `ForestControl' which can be created using
         `cforest_control()'. 

    o    sampling of a fraction of the observations without replacement
         is now available for the `cforest' implementation of random forest.


                CHANGES IN party VERSION 0.8-4 (2006-04-04)

    o    renamed argument `teststattype' to `teststat' with defaults
         c("quad", "max") in order to be compatible with the `coin' package, 
         version >= 0.4-5

    o    use `1 - (1 - p)^k' instead of `p * k' for Bonferroni-adjustment.
         Node 7 for the `GlaucomaM' data is now splitted in addition (in tms).


                CHANGES IN party VERSION 0.8-3 (2006-03-20)

    o   `predict' returned nonsensical results in case a tree was 
        fitted to a multivariate response variable. Now a list with one
        element for each observation is returned.


                CHANGES IN party VERSION 0.8-2 (2006-03-01)

    o    plotting buglets fixed: improved axis in MOB plots,
         correct (transparent) background on jpeg() and png() devices.

